--- a/pages/8707.html
+++ b/pages/8707.html
@@ -317,7 +317,10 @@ margin-left: 0em;
 
 <h4 id="type_theory">Type theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/natural+deduction">natural deduction</a></strong> <a class="existingWikiWord" href="/nlab/show/metalanguage">metalanguage</a>, <a class="existingWikiWord" href="/nlab/show/practical+foundations">practical foundations</a></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/natural+deduction">natural deduction</a></strong> <a class="existingWikiWord" href="/nlab/show/metalanguage">metalanguage</a>, <a class="existingWikiWord" href="/nlab/show/practical+foundations">practical foundations</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/judgement">judgement</a></p>
 </li>
@@ -329,7 +332,9 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/antecedents">antecedents</a><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_326683e7e945796d64895ffa5c2711037bd82af8_1"><semantics><mrow><mo>⊢</mo></mrow><annotation encoding="application/x-tex">\vdash</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/consequent">consequent</a>, <a class="existingWikiWord" href="/nlab/show/succedents">succedents</a></li>
 </ul>
 </li>
-</ul><ol>
+</ul>
+
+<ol>
 <li><a class="existingWikiWord" href="/nlab/show/type+formation+rule">type formation rule</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/term+introduction+rule">term introduction rule</a></li>
@@ -337,9 +342,17 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/term+elimination+rule">term elimination rule</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/computation+rule">computation rule</a></li>
-</ol><p><strong><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/dependent+type+theory">dependent</a>, <a class="existingWikiWord" href="/nlab/show/intensional+type+theory">intensional</a>, <a class="existingWikiWord" href="/nlab/show/observational+type+theory">observational type theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a>)</p><ul>
+</ol>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/dependent+type+theory">dependent</a>, <a class="existingWikiWord" href="/nlab/show/intensional+type+theory">intensional</a>, <a class="existingWikiWord" href="/nlab/show/observational+type+theory">observational type theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a>)</p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/calculus+of+constructions">calculus of constructions</a></li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/syntax">syntax</a></strong> <a class="existingWikiWord" href="/nlab/show/object+language">object language</a></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/syntax">syntax</a></strong> <a class="existingWikiWord" href="/nlab/show/object+language">object language</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/theory">theory</a>, <a class="existingWikiWord" href="/nlab/show/axiom">axiom</a></p>
 </li>
@@ -355,7 +368,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/theorem">theorem</a></p>
 </li>
-</ul><p><strong></strong> = <strong></strong> +<strong></strong> +<strong></strong></p><table><thead><tr><th></th><th></th><th></th></tr></thead><tbody><tr><td style="text-align: left;"></td><td style="text-align: left;">/</td><td style="text-align: left;">-/</td></tr>
+</ul>
+
+<p><strong></strong> = <strong></strong> +<strong></strong> +<strong></strong></p>
+
+<table><thead><tr><th></th><th></th><th></th></tr></thead><tbody><tr><td style="text-align: left;"></td><td style="text-align: left;">/</td><td style="text-align: left;">-/</td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;">, </td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
@@ -380,7 +397,11 @@ margin-left: 0em;
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;">(absence of) </td><td style="text-align: left;">(absence of) </td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-</tbody></table><p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+levels">homotopy levels</a></strong></p><ul>
+</tbody></table>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+levels">homotopy levels</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a></p>
 </li>
@@ -414,7 +435,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/semantics">semantics</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/semantics">semantics</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/internal+logic">internal logic</a>, <a class="existingWikiWord" href="/nlab/show/categorical+semantics">categorical semantics</a></p>
 
@@ -444,15 +469,21 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/type-theoretic+model+category">type-theoretic model category</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/type+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="modalities_closure_and_reflection">Modalities, Closure and Reflection</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/modal+type+theory">modal type theory</a></strong>, <a class="existingWikiWord" href="/nlab/show/modal+logic">modal logic</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/closure+operator">closure operator</a></strong>, <a class="existingWikiWord" href="/nlab/show/universal+closure+operator">universal closure operator</a></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/modal+type+theory">modal type theory</a></strong>, <a class="existingWikiWord" href="/nlab/show/modal+logic">modal logic</a></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/closure+operator">closure operator</a></strong>, <a class="existingWikiWord" href="/nlab/show/universal+closure+operator">universal closure operator</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/idempotent+monad">idempotent monad</a>, <a class="existingWikiWord" href="/nlab/show/comonad">comonad</a></p>
 </li>
@@ -464,7 +495,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/reflective+subcategory">reflective subcategory</a>, <a class="existingWikiWord" href="/nlab/show/coreflective+subcategory">coreflective subcategory</a></p>
 </li>
-</ul><h3 id="examples">Examples</h3><ul>
+</ul>
+
+<h3 id="examples">Examples</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Moore+closure">Moore closure</a></p>
 </li>
@@ -484,7 +519,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Pi+modality">Pi modality</a><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_ce274c9caf9a3b6e1e00275eb8868a7ab455ec1f_1"><semantics><mrow><mo>⊣</mo></mrow><annotation encoding="application/x-tex">\dashv</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/flat+modality">flat modality</a> <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_ce274c9caf9a3b6e1e00275eb8868a7ab455ec1f_2"><semantics><mrow><mo>⊣</mo></mrow><annotation encoding="application/x-tex">\dashv</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/sharp+modality">sharp modality</a></p>
 </li>
-</ul></div>
+</ul></div></div>
 </div>
 </div>
 
@@ -714,8 +749,8 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>, <a class="existingWikiWord" href="/nlab/show/Michael+Shulman">Michael Shulman</a>, <em><a class="existingWikiWord" href="/schreiber/show/Quantum+gauge+field+theory+in+Cohesive+homotopy+type+theory">Quantum gauge field theory in Cohesive homotopy type theory</a></em>, in <a class="existingWikiWord" href="/nlab/show/Ross+Duncan">Ross Duncan</a>, <a class="existingWikiWord" href="/nlab/show/Prakash+Panangaden">Prakash Panangaden</a> (eds.) <em>Proceedings 9th Workshop on Quantum Physics and Logic</em>, Brussels, Belgium, 10-12 October 2012 (<a href="http://arxiv.org/abs/1408.0054">arXiv:1408.0054</a>)</p>
 </li>
 
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Michael+Shulman">Michael Shulman</a>, <em>Brouwer’s fixed-point theorem in real-cohesive homotopy type theory</em>, Mathematical Structures in Computer Science 28.6 (2018): 856-941 (<a href="https://arxiv.org/abs/1509.07584">arXiv:1509.07584</a>)</p>
+<li id="Shulman15">
+<p><a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>, <em>Brouwer’s fixed-point theorem in real-cohesive homotopy type theory</em>, Mathematical Structures in Computer Science Vol 28 (6) (2018): 856-941 (<a href="https://arxiv.org/abs/1509.07584">arXiv:1509.07584</a>, <a href="https://doi.org/10.1017/S0960129517000147">doi:10.1017/S0960129517000147</a>)</p>
 </li>
 
 <li id="Wellen18">
@@ -842,14 +877,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  5, 2018 at 05:15:07.
+  Last revised on January  7, 2019 at 16:11:02.
   See the <a href="https://ncatlab.org/nlab/history/modal type theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/modal+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/modal+type+theory/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/modal+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/modal+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/modal+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/modal+type+theory/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/modal+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/modal+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/modal type theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
