--- a/pages/17039.html
+++ b/pages/17039.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1394,7 +1394,7 @@ margin-left: 0em;
 
 <h3 id="spaces_as_infinitygroupoids_timothy_porter">Spaces as infinity-groupoids (Timothy Porter)</h3>
 
-<p><a class="existingWikiWord" href="/nlab/show/Timothy+Porter">Timothy Porter</a> on the thinking of spaces as infinity groupoids and the relation with the <a class="existingWikiWord" href="/nlab/show/homotopy+hypothesis">homotopy hypothesis</a>.</p>
+<p><a class="existingWikiWord" href="/nlab/show/Timothy+Porter">Timothy Porter</a> on thinking of spaces as infinity groupoids and the relation with the <a class="existingWikiWord" href="/nlab/show/homotopy+hypothesis">homotopy hypothesis</a>.</p>
 
 <p>(<a href="https://www.youtube.com/watch?v=BH_NwgM8QjI">video recording</a>) (<a class="existingWikiWord" href="/nlab/files/Spaces+as+infinity-groupoids.pdf" title="">draft of article</a>)</p>
 
@@ -1477,14 +1477,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  2, 2019 at 05:05:03.
+  Last revised on January  8, 2019 at 02:26:46.
   See the <a href="https://ncatlab.org/nlab/history/New Spaces for Mathematics and Physics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/New+Spaces+for+Mathematics+and+Physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/New+Spaces+for+Mathematics+and+Physics/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/New+Spaces+for+Mathematics+and+Physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/New+Spaces+for+Mathematics+and+Physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/New+Spaces+for+Mathematics+and+Physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/New+Spaces+for+Mathematics+and+Physics/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/New+Spaces+for+Mathematics+and+Physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/New+Spaces+for+Mathematics+and+Physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/New Spaces for Mathematics and Physics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
