--- a/pages/3814.html
+++ b/pages/3814.html
@@ -1376,6 +1376,10 @@ margin-left: 0em;
 <li>
 <p>Dmitry Kazakov, <em>Beyond the Standard Model’ 17</em> (<a href="https://arxiv.org/abs/1807.00148">arXiv:1807.00148</a>)</p>
 </li>
+
+<li id="Wulzer19">
+<p>Andrea Wulzer, <em>Behind the Standard Model</em> (<a href="https://arxiv.org/abs/1901.01017">arXiv:1901.01017</a>)</p>
+</li>
 </ul>
 
 <p>Review specifically with an eye towards <a class="existingWikiWord" href="/nlab/show/grand+unified+theory">grand unified theory</a> is in</p>
@@ -1413,14 +1417,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  2, 2019 at 08:57:36.
+  Last revised on January  8, 2019 at 02:31:35.
   See the <a href="https://ncatlab.org/nlab/history/standard model of particle physics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/standard+model+of+particle+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+particle+physics/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+particle+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+particle+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/standard+model+of+particle+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+particle+physics/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+particle+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+particle+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/standard model of particle physics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
