--- a/pages/20043.html
+++ b/pages/20043.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      weakly initial algebras in nLab
+      weakly initial in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      weakly initial algebras
+      weakly initial
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9437/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9437/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,48 +308,40 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
-<body>
-<h1 id="contents">Contents</h1>
-<div class='maruku_toc'>
-<ul>
-<li><a href='#definition'>Definition</a></li>
-<li><a href='#references'>References</a></li>
-</ul>
-</div>
+    <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='definition'>Definition</h2>
 
-<h2 id="definition">Definition</h2>
+<p>An object in a category is <strong>weakly initial</strong> if there is a morphism from it to every other object, and <a class='existingWikiWord' href='/nlab/show/initial+object'>initial</a> if this morphism is unique.</p>
 
-<p>An object in a category is <strong>weakly initial</strong> if there is a morphism from it to every other object, and <strong>initial</strong> if this morphism is unique.</p>
-
-<h2 id="references">References</h2>
+<h2 id='references'>References</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Philip+Wadler">Philip Wadler</a>, <em><a href="https://homepages.inf.ed.ac.uk/wadler/papers/free-rectypes/free-rectypes.txt">Recursive types for free!</a></em></li>
+<li><a class='existingWikiWord' href='/nlab/show/Philip+Wadler'>Philip Wadler</a>, <em><a href='https://homepages.inf.ed.ac.uk/wadler/papers/free-rectypes/free-rectypes.txt'>Recursive types for free!</a></em></li>
 </ul>
-</body></html>
 
+<p>
+</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on January  8, 2019 at 03:07:29.
-  See the <a href="https://ncatlab.org/nlab/history/weakly initial algebras" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Last revised on January  8, 2019 at 04:27:17.
+  See the <a href="https://ncatlab.org/nlab/history/weakly initial" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/weakly+initial+algebras" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  | <a href="https://ncatlab.org/nlab/show/weakly initial algebras/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/weakly+initial" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/weakly+initial/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/weakly+initial" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/weakly+initial" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/weakly initial/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/weakly+initial+algebras" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/weakly+initial" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/weakly+initial+algebras" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/weakly+initial" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/weakly+initial+algebras" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/weakly+initial" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
