--- a/pages/19610.html
+++ b/pages/19610.html
@@ -308,125 +308,151 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <div class='rightHandSide'>
-<div class='toc clickDown' tabindex='0'>
-<h3 id='context'>Context</h3>
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
+<body>
+<div class="rightHandSide">
+<div class="toc clickDown" tabindex="0">
+<h3 id="context">Context</h3>
 
-<h4 id='category_theory'>Category theory</h4>
+<h4 id="category_theory">Category theory</h4>
 
-<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a></strong></p><h2 id='concepts'>Concepts</h2><ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/category'>category</a></p>
-</li>
+<div class="hide"><div>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
-</li>
+<p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a></p>
-</li>
-</ul><h2 id='universal_constructions'>Universal constructions</h2><ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/universal+construction'>universal construction</a></p>
+<h2 id="concepts">Concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/representable+functor'>representable functor</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/category">category</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/adjoint+functor'>adjoint functor</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/functor">functor</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/limit'>limit</a>/<a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/natural+transformation">natural transformation</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/weighted+limit'>weighted limit</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Cat">Cat</a></p>
+</li>
+</ul>
+
+<h2 id="universal_constructions">Universal constructions</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/universal+construction">universal construction</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/representable+functor">representable functor</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/end'>end</a>/<a class='existingWikiWord' href='/nlab/show/coend'>coend</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/adjoint+functor">adjoint functor</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Kan+extension'>Kan extension</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/limit">limit</a>/<a class="existingWikiWord" href="/nlab/show/colimit">colimit</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/weighted+limit">weighted limit</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/end">end</a>/<a class="existingWikiWord" href="/nlab/show/coend">coend</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Kan+extension">Kan extension</a></p>
 </li>
 </ul>
 </li>
-</ul><h2 id='theorems'>Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Yoneda+lemma'>Yoneda lemma</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Yoneda+lemma">Yoneda lemma</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>Isbell duality</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Grothendieck+construction'>Grothendieck construction</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Grothendieck+construction">Grothendieck construction</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/adjoint+functor+theorem'>adjoint functor theorem</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/adjoint+functor+theorem">adjoint functor theorem</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/monadicity+theorem'>monadicity theorem</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/monadicity+theorem">monadicity theorem</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/adjoint+lifting+theorem'>adjoint lifting theorem</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/adjoint+lifting+theorem">adjoint lifting theorem</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Tannaka+duality'>Tannaka duality</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Tannaka+duality">Tannaka duality</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Gabriel-Ulmer+duality'>Gabriel-Ulmer duality</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Gabriel-Ulmer+duality">Gabriel-Ulmer duality</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/small+object+argument'>small object argument</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/small+object+argument">small object argument</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Freyd-Mitchell+embedding+theorem'>Freyd-Mitchell embedding theorem</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Freyd-Mitchell+embedding+theorem">Freyd-Mitchell embedding theorem</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/relation+between+type+theory+and+category+theory'>relation between type theory and category theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/relation+between+type+theory+and+category+theory">relation between type theory and category theory</a></p>
 </li>
-</ul><h2 id='extensions'>Extensions</h2><ul>
+</ul>
+
+<h2 id="extensions">Extensions</h2>
+
+<ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>sheaf and topos theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/sheaf+and+topos+theory">sheaf and topos theory</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/enriched+category+theory'>enriched category theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/enriched+category+theory">enriched category theory</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/higher+category+theory">higher category theory</a></p>
 </li>
-</ul><h2 id='applications'>Applications</h2><ul>
-<li><a class='existingWikiWord' href='/nlab/show/applications+of+%28higher%29+category+theory'>applications of (higher) category theory</a></li>
-</ul><div>
+</ul>
+
+<h2 id="applications">Applications</h2>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/applications+of+%28higher%29+category+theory">applications of (higher) category theory</a></li>
+</ul>
+<div>
 <p>
-  <a href='/nlab/edit/category+theory+-+contents'>Edit this sidebar</a>
+  <a href="/nlab/edit/category+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
-<h1 id='contents'>Contents</h1>
+<h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
@@ -434,33 +460,39 @@ margin-left: 0em;
 </ul>
 </div>
 
-<h2 id='idea'>Idea</h2>
+<h2 id="idea">Idea</h2>
 
-<p>A <strong>weak colimit</strong> for a <a class='existingWikiWord' href='/nlab/show/diagram'>diagram</a> in a <a class='existingWikiWord' href='/nlab/show/category'>category</a> is a <a class='existingWikiWord' href='/nlab/show/cocone'>cocone</a> over that diagram which satisfies the existence property of a <a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a> but not necessarily the uniqueness. The dual concept is a <a class='existingWikiWord' href='/nlab/show/weak+limit'>weak limit</a>, see there for more.</p>
+<p>A <strong>weak colimit</strong> for a <a class="existingWikiWord" href="/nlab/show/diagram">diagram</a> in a <a class="existingWikiWord" href="/nlab/show/category">category</a> is a <a class="existingWikiWord" href="/nlab/show/cocone">cocone</a> over that diagram which satisfies the existence property of a <a class="existingWikiWord" href="/nlab/show/colimit">colimit</a> but not necessarily the uniqueness. The dual concept is a <a class="existingWikiWord" href="/nlab/show/weak+limit">weak limit</a>, see there for more.</p>
 
-<p>For example, a <strong>weakly initial object</strong> in a category, <math class='maruku-mathml' display='inline' id='mathml_5836222b0b1977db3e188713d14006976f77ce64_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>, is such that there is at least one arrow from it to any object in <math class='maruku-mathml' display='inline' id='mathml_5836222b0b1977db3e188713d14006976f77ce64_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>.</p>
+<p>For example, a <strong><a class="existingWikiWord" href="/nlab/show/weakly+initial+object">weakly initial object</a></strong> in a category, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>, is such that there is at least one arrow from it to any object in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>.</p>
 
-<h2 id='related_concepts'>Related concepts</h2>
+<h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/weak+multilimit'>weak multilimit</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/weak+limit">weak limit</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/WISC'>WISC</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/weak+multilimit">weak multilimit</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/weakly+initial+set'>weakly initial set</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/WISC">WISC</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/weakly+initial+set">weakly initial set</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/weakly+initial+object">weakly initial object</a></li>
 </ul>
+</body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Created on August 23, 2018 at 01:24:07.
+  Last revised on January  8, 2019 at 06:46:45.
   See the <a href="https://ncatlab.org/nlab/history/weak colimit" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/weak+colimit" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/weak+colimit" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/weak+colimit/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/weak+colimit" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/weak+colimit" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/weak colimit/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
