--- a/pages/447.html
+++ b/pages/447.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1485/#Item_26" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1485/#Item_27" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1201,6 +1201,8 @@ R(X \times Y) &amp; \cong &amp; R((X \otimes_{\Delta} \hom) \times (Y \otimes_{\
 
 <p>This result implies that the geometric realization functor preserves all five classes of maps in a <a class="existingWikiWord" href="/nlab/show/model+category">model category</a>: <a class="existingWikiWord" href="/nlab/show/weak+equivalences">weak equivalences</a>, <a class="existingWikiWord" href="/nlab/show/cofibrations">cofibrations</a>, <a class="existingWikiWord" href="/nlab/show/acyclic+cofibrations">acyclic cofibrations</a>, <a class="existingWikiWord" href="/nlab/show/fibrations">fibrations</a>, and <a class="existingWikiWord" href="/nlab/show/acyclic+fibrations">acyclic fibrations</a>.</p>
 
+<p>In fact the geometric realization of a Kan fibration is even a <a class="existingWikiWord" href="/nlab/show/Hurewicz+fibration">Hurewicz fibration</a> (at least relative to a <a class="existingWikiWord" href="/nlab/show/convenient+category+of+spaces">convenient category of spaces</a> in which it lives). This follows from the fact that <a class="existingWikiWord" href="/nlab/show/a+Serre+fibration+between+CW-complexes+is+a+Hurewicz+fibration">a Serre fibration between CW-complexes is a Hurewicz fibration</a>; a direct proof along the lines of Quillen’s can be found in <a href="#FP90">Fritch and Piccinini, Theorem 4.5.25</a>.</p>
+
 <h3 id="induced_properties_of_the_fibrant_replacement">Induced properties of the fibrant replacement</h3>
 
 <p>The previous two sections show that the geometric realization preserves finite limits and fibrations. Since its right adjoint, the singular complex functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Top</mi><mo>→</mo><mi>sSet</mi></mrow><annotation encoding="application/x-tex">Top \to sSet</annotation></semantics></math>, also preserves both (much more trivially), and since all objects of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Top</mi></mrow><annotation encoding="application/x-tex">Top</annotation></semantics></math> are fibrant and the adjunction is simplicially enriched, it follows that the composite <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>sSet</mi><mo>→</mo><mi>Top</mi><mo>→</mo><mi>sSet</mi></mrow><annotation encoding="application/x-tex">sSet \to Top \to sSet</annotation></semantics></math> is a simplicially enriched <a class="existingWikiWord" href="/nlab/show/fibrant+replacement+functor">fibrant replacement functor</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>sSet</mi></mrow><annotation encoding="application/x-tex">sSet</annotation></semantics></math> that additionally preserves both finite limits and fibrations.</p>
@@ -1239,7 +1241,13 @@ R(X \times Y) &amp; \cong &amp; R((X \otimes_{\Delta} \hom) \times (Y \otimes_{\
 <h2 id="references">References</h2>
 
 <ul>
-<li id="Quillen68"><a class="existingWikiWord" href="/nlab/show/Daniel+Quillen">Daniel Quillen</a>, <em>The geometric realization of a Kan fibration is a Serre fibration. Proc. Amer. Math. Soc. 19 1968 1499–1500. <a href="https://www.ams.org/journals/proc/1968-019-06/S0002-9939-1968-0238322-1/S0002-9939-1968-0238322-1.pdf">pdf</a></em></li>
+<li id="Quillen68">
+<p><a class="existingWikiWord" href="/nlab/show/Daniel+Quillen">Daniel Quillen</a>, <em>The geometric realization of a Kan fibration is a Serre fibration. Proc. Amer. Math. Soc. 19 1968 1499–1500. <a href="https://www.ams.org/journals/proc/1968-019-06/S0002-9939-1968-0238322-1/S0002-9939-1968-0238322-1.pdf">pdf</a></em></p>
+</li>
+
+<li id="FP90">
+<p>Fritsch and Piccinini, <em>Cellular Structures in Topology</em>, Cambridge University Press, 1990, ISBN 0521327849</p>
+</li>
 </ul>
 </body></html>
 
@@ -1247,14 +1255,14 @@ R(X \times Y) &amp; \cong &amp; R((X \otimes_{\Delta} \hom) \times (Y \otimes_{\
 
 <div class="revisedby">
   <p>
-  Last revised on January  5, 2019 at 01:01:13.
+  Last revised on January  8, 2019 at 08:14:31.
   See the <a href="https://ncatlab.org/nlab/history/geometric realization" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+realization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+realization/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/geometric+realization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+realization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometric+realization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+realization/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/geometric+realization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+realization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometric realization/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
