--- a/pages/7761.html
+++ b/pages/7761.html
@@ -564,7 +564,7 @@ margin-left: 0em;
 
 <h3 id="idea">Idea</h3>
 
-<p>Ultracategories are <a class="existingWikiWord" href="/nlab/show/categories">categories</a> with <a class="existingWikiWord" href="/nlab/show/extra+structure">extra structure</a>, called an <em>ultrastructure</em> (see <a href="#Lurie">Lurie, Sec 1.3</a>). They were introduced in <a href="#Makkai87">Makkai 87</a> in order to prove <a class="existingWikiWord" href="/nlab/show/conceptual+completeness">conceptual completeness</a>.</p>
+<p>Ultracategories are <a class="existingWikiWord" href="/nlab/show/categories">categories</a> with <a class="existingWikiWord" href="/nlab/show/extra+structure">extra structure</a>, called an <em>ultrastructure</em> (see <a href="#Lurie">Lurie, Sec 1.3</a>). They were introduced in <a href="#Makkai87">Makkai 87</a> in order to prove <a class="existingWikiWord" href="/nlab/show/conceptual+completeness">conceptual completeness</a>, but note that Lurie’s definition differs from Makkai’s (<a href="#Lurie">Lurie, Warning 1.0.4</a>).</p>
 
 <h3 id="references">References</h3>
 
@@ -583,7 +583,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  8, 2019 at 08:50:59.
+  Last revised on January  8, 2019 at 09:03:18.
   See the <a href="https://ncatlab.org/nlab/history/ultracategory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
