--- a/pages/372.html
+++ b/pages/372.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/7873/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7873/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,13 @@ margin-left: 0em;
 
 <h4 id="category_theory">Category theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p><h2 id="concepts">Concepts</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category">category</a></p>
 </li>
@@ -333,7 +339,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Cat">Cat</a></p>
 </li>
-</ul><h2 id="universal_constructions">Universal constructions</h2><ul>
+</ul>
+
+<h2 id="universal_constructions">Universal constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/universal+construction">universal construction</a></p>
 
@@ -363,7 +373,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Yoneda+lemma">Yoneda lemma</a></p>
 </li>
@@ -407,7 +421,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relation+between+type+theory+and+category+theory">relation between type theory and category theory</a></p>
 </li>
-</ul><h2 id="extensions">Extensions</h2><ul>
+</ul>
+
+<h2 id="extensions">Extensions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/sheaf+and+topos+theory">sheaf and topos theory</a></p>
 </li>
@@ -419,17 +437,28 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+category+theory">higher category theory</a></p>
 </li>
-</ul><h2 id="applications">Applications</h2><ul>
+</ul>
+
+<h2 id="applications">Applications</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/applications+of+%28higher%29+category+theory">applications of (higher) category theory</a></li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/category+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="limits_and_colimits">Limits and colimits</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/limit">limits and colimits</a></strong></p><h2 id="1categorical">1-Categorical</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/limit">limits and colimits</a></strong></p>
+
+<h2 id="1categorical">1-Categorical</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/limit">limit and colimit</a></p>
 
@@ -501,7 +530,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/end">end and coend</a></p>
 </li>
-</ul><h2 id="2categorical">2-Categorical</h2><ul>
+</ul>
+
+<h2 id="2categorical">2-Categorical</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/2-limit">2-limit</a></p>
 
@@ -531,7 +564,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/2-pullback">2-pullback</a>, <a class="existingWikiWord" href="/nlab/show/comma+object">comma object</a></p>
 </li>
-</ul><h2 id="1categorical_2">(∞,1)-Categorical</h2><ul>
+</ul>
+
+<h2 id="1categorical_2">(∞,1)-Categorical</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-limit">(∞,1)-limit</a></p>
 
@@ -545,7 +582,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="modelcategorical">Model-categorical</h3><ul>
+</ul>
+
+<h3 id="modelcategorical">Model-categorical</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy+Kan+extension">homotopy Kan extension</a></p>
 </li>
@@ -585,11 +626,12 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/infinity-limits+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -613,7 +655,7 @@ margin-left: 0em;
 
 <p>An <strong>initial object</strong> in a <a class="existingWikiWord" href="/nlab/show/category">category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> is an <a class="existingWikiWord" href="/nlab/show/object">object</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>∅</mi></mrow><annotation encoding="application/x-tex">\emptyset</annotation></semantics></math> such that for any object <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>, there is a unique <a class="existingWikiWord" href="/nlab/show/morphism">morphism</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>!</mo><mo>:</mo><mi>∅</mi><mo>→</mo><mi>x</mi></mrow><annotation encoding="application/x-tex">!:\emptyset\to x</annotation></semantics></math>. An initial object, if it exists, is unique up to unique <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a>, so we speak of <a class="existingWikiWord" href="/nlab/show/the">the</a> initial object.</p>
 
-<p>An initial object may also be called <em>coterminal</em>, <em>universal initial</em>, <em>co-universal</em>, or simply <em>universal</em>.</p>
+<p>An initial object may also be called <em>coterminal</em>, <em>coterminator</em>, <em>universal initial</em>, <em>co-universal</em>, or simply <em>universal</em>.</p>
 
 <p>Initial objects are the <a class="existingWikiWord" href="/nlab/show/duality">dual</a> concept to <a class="existingWikiWord" href="/nlab/show/terminal+object">terminal object</a>s: an initial object in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> is the same as a terminal object in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mi>op</mi></msup></mrow><annotation encoding="application/x-tex">C^{op}</annotation></semantics></math>. An object that is both initial and terminal is called a <a class="existingWikiWord" href="/nlab/show/zero+object">zero object</a>.</p>
 
@@ -803,14 +845,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 22, 2018 at 06:12:50.
+  Last revised on January  8, 2019 at 10:56:15.
   See the <a href="https://ncatlab.org/nlab/history/initial object" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/initial+object" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/initial+object/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/initial+object" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/initial+object" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/initial+object" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/initial+object/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/initial+object" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/initial+object" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/initial object/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
