--- a/pages/16597.html
+++ b/pages/16597.html
@@ -310,16 +310,30 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <ul>
 <li><a href="http://florisvandoorn.com">webpage</a></li>
 </ul>
 
+<h2 id="projects">Projects</h2>
+
+<p>Formalization of <a class="existingWikiWord" href="/nlab/show/spectral+sequences">spectral sequences</a> in <a class="existingWikiWord" href="/nlab/show/Lean">Lean</a>-<span class="newWikiWord">HotT<a href="/nlab/new/HotT">?</a></span> is in</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Floris+van+Doorn">Floris van Doorn</a>, <em>Spectral</em> (<a href="https://github.com/cmu-phil/Spectral">github.com/cmu-phil/Spectral</a>)</li>
+</ul>
+
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Lean">Lean</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Lean">Lean</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/spectral+sequence">spectral sequence</a>, <a class="existingWikiWord" href="/nlab/show/Serre+spectral+sequence">Serre spectral sequence</a></p>
+</li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
@@ -327,14 +341,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 17, 2018 at 11:26:31.
+  Last revised on January  8, 2019 at 11:19:57.
   See the <a href="https://ncatlab.org/nlab/history/Floris van Doorn" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Floris+van+Doorn" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Floris+van+Doorn/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Floris+van+Doorn" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Floris+van+Doorn" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Floris+van+Doorn" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Floris+van+Doorn/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Floris+van+Doorn" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Floris+van+Doorn" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Floris van Doorn/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
