--- a/pages/1504.html
+++ b/pages/1504.html
@@ -1598,6 +1598,10 @@ margin-left: 0em;
 
 <p>More recently there is</p>
 
+<ul>
+<li>Tomoyuki Takezaki, <em>Open superstring field theory including the Ramond sector based on the supermoduli space</em> (<a href="https://arxiv.org/abs/1901.02176">arXiv:1901.02176</a>)</li>
+</ul>
+
 <h3 id="effective_field_theory">Effective field theory</h3>
 
 <p>Discussion of Wilsonian <a class="existingWikiWord" href="/nlab/show/effective+field+theory">effective field theory</a> of string field theory includes</p>
@@ -1915,14 +1919,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 31, 2018 at 16:17:41.
+  Last revised on January  8, 2019 at 22:48:32.
   See the <a href="https://ncatlab.org/nlab/history/string field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+field+theory/56" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(56 revisions)</span> | <a href="/nlab/show/diff/string+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+field+theory/57" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(57 revisions)</span> | <a href="/nlab/show/diff/string+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/string field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
