--- a/pages/11468.html
+++ b/pages/11468.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9442/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,8 @@ margin-left: 0em;
 
 <h4 id="string_theory">String theory</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong></p>
 </li>
@@ -325,7 +326,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+about+string+theory">books about string theory</a></p>
 </li>
-</ul><h3 id="ingredients">Ingredients</h3><ul>
+</ul>
+
+<h3 id="ingredients">Ingredients</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a></p>
 </li>
@@ -345,7 +350,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>, <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>, <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></li>
 </ul>
 </li>
-</ul><h3 id="critical_string_models">Critical string models</h3><ul>
+</ul>
+
+<h3 id="critical_string_models">Critical string models</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a></p>
 
@@ -425,7 +434,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Ho%C5%99ava-Witten+theory">Hořava-Witten theory</a></li>
 </ul>
 </li>
-</ul><h3 id="extended_objects">Extended objects</h3><ul>
+</ul>
+
+<h3 id="extended_objects">Extended objects</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/brane">brane</a></p>
 </li>
@@ -509,7 +522,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="topological_strings">Topological strings</h3><ul>
+</ul>
+
+<h3 id="topological_strings">Topological strings</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>, <a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
 
@@ -521,7 +538,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+M-theory">topological M-theory</a></p>
 </li>
-</ul><h2 id="backgrounds">Backgrounds</h2><ul>
+</ul>
+
+<h2 id="backgrounds">Backgrounds</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/target+space">target space</a>, <a class="existingWikiWord" href="/nlab/show/background+gauge+field">background gauge field</a></p>
 </li>
@@ -533,7 +554,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
 </li>
-</ul><h2 id="phenomenology">Phenomenology</h2><ul>
+</ul>
+
+<h2 id="phenomenology">Phenomenology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
 
@@ -547,15 +572,21 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/string+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="geometry">Geometry</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+topos+theory">higher topos theory</a></p>
 </li>
@@ -563,7 +594,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></p>
 </li>
-</ul><h2 id="concepts">Concepts</h2><ul>
+</ul>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><strong>geometric <a class="existingWikiWord" href="/nlab/show/big+and+little+toposes">little</a> <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a>es</strong></p>
 
@@ -597,7 +632,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/geometric+%E2%88%9E-stacks">geometric ∞-stacks</a></li>
 </ul>
 </li>
-</ul><h2 id="constructions">Constructions</h2><ul>
+</ul>
+
+<h2 id="constructions">Constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/loop+space+object">loop space object</a>, <a class="existingWikiWord" href="/nlab/show/free+loop+space+object">free loop space object</a></p>
 </li>
@@ -605,7 +644,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+in+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a> / <a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+of+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">of a locally ∞-connected (∞,1)-topos</a></p>
 </li>
-</ul><h2 id="examples">Examples</h2><ul>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+algebraic+geometry">derived algebraic geometry</a></p>
 
@@ -665,7 +708,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+Cartan+geometry">higher Cartan geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -677,11 +724,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Tannaka+duality+for+geometric+stacks">Tannaka duality for geometric stacks</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/higher+geometry+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -815,20 +863,26 @@ margin-left: 0em;
 <ul>
 <li id="BGZ16">Miriam Bocardo-Gaspar, H. García-Compeán, W. A. Zúñiga-Galindo, <em>Regularization of p-adic String Amplitudes, and Multivariate Local Zeta Functions</em> (<a href="https://arxiv.org/abs/1611.03807">arXiv:1611.03807</a>)</li>
 </ul>
+
+<p>Relation to <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a> and the <a class="existingWikiWord" href="/nlab/show/Riemann+zeta+function">Riemann zeta function</a>:</p>
+
+<ul>
+<li>An Huang, Bogdan Stoica, <a class="existingWikiWord" href="/nlab/show/Shing-Tung+Yau">Shing-Tung Yau</a>, <em>General relativity from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic strings</em> (<a href="https://arxiv.org/abs/1901.02013">arXiv:1901.02013</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 05:50:58.
+  Last revised on January  8, 2019 at 22:40:36.
   See the <a href="https://ncatlab.org/nlab/history/p-adic string theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/p-adic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/p-adic+string+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/p-adic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/p-adic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/p-adic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/p-adic+string+theory/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/p-adic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/p-adic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/p-adic string theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
