--- a/pages/9750.html
+++ b/pages/9750.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4923/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4923/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -877,7 +877,7 @@ margin-left: 0em;
 
 <h2 id="References">References</h2>
 
-<p>Formalization of double dimensional reduction is discussed in <span class="newWikiWord">rational homotolpy theory<a href="/nlab/new/rational+homotolpy+theory">?</a></span> in</p>
+<p>Formalization of double dimensional reduction is discussed in <a class="existingWikiWord" href="/nlab/show/rational+homotopy+theory">rational homotopy theory</a> in</p>
 
 <ul>
 <li id="FSS16"><a class="existingWikiWord" href="/nlab/show/Domenico+Fiorenza">Domenico Fiorenza</a>, <a class="existingWikiWord" href="/nlab/show/Hisham+Sati">Hisham Sati</a>, <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>, Section 3 of <em><a class="existingWikiWord" href="/schreiber/show/T-Duality+from+super+Lie+n-algebra+cocycles+for+super+p-branes">T-Duality from super Lie n-algebra cocycles for super p-branes</a></em>, ATMP Volume 22 (2018) Number 5 (<a href="https://arxiv.org/abs/1611.06536">arXiv:1611.06536</a>)</li>
@@ -946,14 +946,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 11, 2019 at 04:40:58.
+  Last revised on January 11, 2019 at 05:14:16.
   See the <a href="https://ncatlab.org/nlab/history/double dimensional reduction" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/double+dimensional+reduction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/double+dimensional+reduction/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/double+dimensional+reduction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/double+dimensional+reduction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/double+dimensional+reduction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/double+dimensional+reduction/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/double+dimensional+reduction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/double+dimensional+reduction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/double dimensional reduction/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
