--- a/pages/11468.html
+++ b/pages/11468.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9442/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9442/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -885,7 +885,7 @@ margin-left: 0em;
 <p>Relation to <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a> and the <a class="existingWikiWord" href="/nlab/show/Riemann+zeta+function">Riemann zeta function</a>:</p>
 
 <ul>
-<li>An Huang, Bogdan Stoica, <a class="existingWikiWord" href="/nlab/show/Shing-Tung+Yau">Shing-Tung Yau</a>, <em>General relativity from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic strings</em> (<a href="https://arxiv.org/abs/1901.02013">arXiv:1901.02013</a>)</li>
+<li id="HuangStoicaYau19">An Huang, Bogdan Stoica, <a class="existingWikiWord" href="/nlab/show/Shing-Tung+Yau">Shing-Tung Yau</a>, <em>General relativity from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic strings</em> (<a href="https://arxiv.org/abs/1901.02013">arXiv:1901.02013</a>)</li>
 </ul>
 </body></html>
 
@@ -893,14 +893,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  8, 2019 at 23:17:09.
+  Last revised on January 11, 2019 at 05:16:09.
   See the <a href="https://ncatlab.org/nlab/history/p-adic string theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/p-adic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/p-adic+string+theory/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/p-adic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/p-adic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/p-adic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/p-adic+string+theory/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/p-adic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/p-adic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/p-adic string theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
