--- a/pages/3872.html
+++ b/pages/3872.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9450/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,7 +311,7 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<p><strong>Sir Michael Atiyah</strong> is an English mathematician of Egyptian origin, a Fields’ medalist, and Abel prize winner (with I. Singer). He is professor of <a class="existingWikiWord" href="/nlab/show/mathematics">mathematics</a> at Edinburgh University.</p>
+<p><strong>Sir Michael Atiyah</strong> was a British-Lebanese mathematician, a Fields’ medalist, and Abel prize winner (with <a class="existingWikiWord" href="/nlab/show/Isadore+Singer">Isadore Singer</a>). He was professor of <a class="existingWikiWord" href="/nlab/show/mathematics">mathematics</a> at Edinburgh University.</p>
 
 <ul>
 <li><a href="http://en.wikipedia.org/wiki/Michael_Atiyah">wikipedia</a></li>
@@ -406,7 +406,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 11, 2019 at 10:57:14.
+  Last revised on January 11, 2019 at 11:06:05.
   See the <a href="https://ncatlab.org/nlab/history/Michael Atiyah" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
