--- a/pages/20028.html
+++ b/pages/20028.html
@@ -335,6 +335,10 @@ margin-left: 0em;
 <li id="GKR18">
 <p><a class="existingWikiWord" href="/nlab/show/Richard+Garner">Richard Garner</a>, Magdalena Kedziorek, <a class="existingWikiWord" href="/nlab/show/Emily+Riehl">Emily Riehl</a>, <em>Lifting accessible model structures</em>, <a href="https://arxiv.org/abs/1802.09889">arXiv:1802.09889</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/John+Bourke">John Bourke</a>, <em>Equipping weak equivalences with algebraic structure</em>, <a href="https://arxiv.org/abs/1712.02523">arxiv:1712.02523</a></p>
+</li>
 </ul>
 </body></html>
 
@@ -342,14 +346,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on December 31, 2018 at 19:38:01.
+  Last revised on January 13, 2019 at 08:57:28.
   See the <a href="https://ncatlab.org/nlab/history/accessible model category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/accessible+model+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/accessible+model+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/accessible+model+category/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/accessible+model+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/accessible+model+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/accessible model category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
